Fix Expand record (Multiselect styles & z-index property of all field types).

--- a/frontend/src/javascripts/components/view/grid/fields/field.scss
+++ b/frontend/src/javascripts/components/view/grid/fields/field.scss
@@ -15,7 +15,13 @@ $table-cell-width: 155px;
   border-radius: 1px;
   position: absolute;
   background-color: #fff;
-  z-index: 1;
+  //z-index: 1;
+}
+.wrapper__table {
+  .table-cell.selected,
+  .table-cell.active {
+    z-index: 1;
+  }
 }
 
 .table-cell.selected .table-cell-wrap .table-cell-inner,
