--- a/frontend/src/javascripts/components/view/recordDialog/recordDialog.scss
+++ b/frontend/src/javascripts/components/view/recordDialog/recordDialog.scss
@@ -184,7 +184,7 @@
       }
 
       .add_file_btn {
-        z-index: 0!important;
+        //z-index: 0!important;
       }
     }
 
@@ -292,7 +292,7 @@
           height: 32px;
           display: block;
           position: absolute;
-          top: 12px;
+          //top: 12px;
 
           .Select-value {
             height: 24px;
